# PGOF

./: .gitignore  CMakeLists.txt  CmakeLists.txt  LICENSE  README.md  design.md  main.cpp
.playwright-mcp/: page-2026-06-15T16-08-43-134Z.yml
apps/pgof_app/: CMakeLists.txt  main.cpp
include/pgof/: car.hpp  car_queue.hpp  fee_handler.hpp  parking_lot_handler.hpp  parking_space.hpp  pgofApp.hpp  time_handler.hpp
libs/: CMakeLists.txt
libs/garage_capacity/: CMakeLists.txt
libs/garage_capacity/include/pgof/: garage_capacity.hpp
libs/garage_capacity/src/: garage_capacity.cpp
src/: car.cpp  car_queue.cpp  fee_handler.cpp  main.cpp  parking_lot_handler.cpp  parking_space.cpp  pgofApp.cpp  time_handler.cpp
tests/: CMakeLists.txt  garage_capacity_tests.cpp  pgof_requirements_tests.cpp
